[gd_scene load_steps=5 format=2]

[ext_resource path="res://button.png" type="Texture" id=1]
[ext_resource path="res://joystix monospace.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://Menu.gd" type="Script" id=3]

[sub_resource type="DynamicFont" id=1]
size = 20
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
use_mipmaps = true
font_data = ExtResource( 2 )

[node name="Menu" type="Node2D"]
script = ExtResource( 3 )

[node name="Start" type="Node2D" parent="."]
position = Vector2( 512, 250 )

[node name="Start" type="TextureButton" parent="Start"]
modulate = Color( 0.470588, 0.894118, 0.4, 1 )
margin_left = -64.0
margin_top = -26.0
margin_right = 64.0
margin_bottom = 26.0
texture_normal = ExtResource( 1 )
expand = true
stretch_mode = 4
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Start"]
margin_left = -52.5
margin_top = -18.0
margin_right = 52.5
margin_bottom = 18.0
custom_fonts/font = SubResource( 1 )
text = "START"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Option" type="Node2D" parent="."]
position = Vector2( 512, 325 )

[node name="Option" type="TextureButton" parent="Option"]
modulate = Color( 0.470588, 0.894118, 0.4, 1 )
margin_left = -64.0
margin_top = -26.0
margin_right = 64.0
margin_bottom = 26.0
texture_normal = ExtResource( 1 )
expand = true
stretch_mode = 4
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Option"]
margin_left = -52.5
margin_top = -18.0
margin_right = 52.5
margin_bottom = 18.0
custom_fonts/font = SubResource( 1 )
text = "option"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Quit" type="Node2D" parent="."]
position = Vector2( 512, 400 )

[node name="Quit" type="TextureButton" parent="Quit"]
modulate = Color( 0.470588, 0.894118, 0.4, 1 )
margin_left = -64.0
margin_top = -26.0
margin_right = 64.0
margin_bottom = 26.0
texture_normal = ExtResource( 1 )
expand = true
stretch_mode = 4
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Quit"]
margin_left = -52.5
margin_top = -18.0
margin_right = 52.5
margin_bottom = 18.0
custom_fonts/font = SubResource( 1 )
text = "Quit"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="Start/Start" to="." method="_on_Start_pressed"]
[connection signal="pressed" from="Option/Option" to="." method="_on_Option_pressed"]
[connection signal="pressed" from="Quit/Quit" to="." method="_on_Quit_pressed"]
